Initial commit, ignoring Visual Studio files

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="questGen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mainMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
